# Pokemon-FIght

./: CMakeLists.txt
assets/: pokemons.txt
src/: Attack.cpp  Attack.hpp  LTexture.cpp  LTexture.hpp  LTimer.cpp  LTimer.hpp  Player.cpp  Player.hpp  Pokemon.cpp  Pokemon.hpp  main.cpp
